--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-async-handler": "^1.1.3",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "fluent-ffmpeg": "^2.1.2",
     "howler": "^2.0.9",
     "meteor-node-stubs": "0.3.2",
     "mime-types": "^2.1.18",
