--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "minstrel",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "transpile-windows": "move .babelrc .babelrc.app & move .babelrc.quasar .babelrc & meteor npx babel node_modules/quasar-framework/dist/quasar.mat.esm.js --out-file node_modules/quasar-framework/dist/quasar.mat.js & powershell -Command \"(gc node_modules\\quasar-framework\\package.json) -replace 'dist/quasar.esm.js', 'dist/quasar.common.js' | sc node_modules\\quasar-framework\\package.json\" & move .babelrc .babelrc.quasar & move .babelrc.app .babelrc;"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
@@ -17,7 +18,10 @@
     "meteor-node-stubs": "0.3.2",
     "mime-types": "^2.1.18",
     "ogv": "^1.5.7",
-    "vue": "^2.5.16"
+    "quasar-extras": "^1.0.2",
+    "quasar-framework": "^0.15.10",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
@@ -26,10 +30,14 @@
     "@babel/plugin-syntax-jsx": "7.0.0-beta.44",
     "@babel/preset-typescript": "^7.0.0-beta.44",
     "@types/bytes": "^3.0.0",
-    "@types/howler": "^2.0.5",
     "@types/express": "^4.11.1",
+    "@types/fluent-ffmpeg": "^2.1.6",
+    "@types/howler": "^2.0.5",
     "@types/meteor": "^1.4.14",
     "autoprefixer": "^8.3.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
